; ModuleID = '/home/carl/AnghaBench/libgit2/src/win32/extr_path_w32.c_git_win32_path_to_utf8.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/win32/extr_path_w32.c_git_win32_path_to_utf8.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i32] [i32 85, i32 78, i32 67, i32 92, i32 0], align 4
@.str.1 = private unnamed_addr constant [3 x i8] c"\\\\\00", align 1
@GIT_WIN_PATH_UTF8 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_win32_path_to_utf8(i8* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  %8 = load i8*, i8** %4, align 8
  store i8* %8, i8** %6, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = call i64 @path__is_nt_namespace(i32* %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %26

12:                                               ; preds = %2
  %13 = load i32*, i32** %5, align 8
  %14 = getelementptr inbounds i32, i32* %13, i64 4
  store i32* %14, i32** %5, align 8
  %15 = load i32*, i32** %5, align 8
  %16 = call i64 @wcsncmp(i32* %15, i8* bitcast ([5 x i32]* @.str to i8*), i32 4)
  %17 = icmp eq i64 %16, 0
  br i1 %17, label %18, label %25

18:                                               ; preds = %12
  %19 = load i32*, i32** %5, align 8
  %20 = getelementptr inbounds i32, i32* %19, i64 4
  store i32* %20, i32** %5, align 8
  %21 = load i8*, i8** %4, align 8
  %22 = call i32 @memcpy(i8* %21, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), i32 2)
  %23 = load i8*, i8** %4, align 8
  %24 = getelementptr inbounds i8, i8* %23, i64 2
  store i8* %24, i8** %6, align 8
  br label %25

25:                                               ; preds = %18, %12
  br label %26

26:                                               ; preds = %25, %2
  %27 = load i8*, i8** %6, align 8
  %28 = load i32, i32* @GIT_WIN_PATH_UTF8, align 4
  %29 = load i32*, i32** %5, align 8
  %30 = call i32 @git__utf16_to_8(i8* %27, i32 %28, i32* %29)
  store i32 %30, i32* %7, align 4
  %31 = icmp slt i32 %30, 0
  br i1 %31, label %32, label %34

32:                                               ; preds = %26
  %33 = load i32, i32* %7, align 4
  store i32 %33, i32* %3, align 4
  br label %38

34:                                               ; preds = %26
  %35 = load i8*, i8** %4, align 8
  %36 = call i32 @git_path_mkposix(i8* %35)
  %37 = load i32, i32* %7, align 4
  store i32 %37, i32* %3, align 4
  br label %38

38:                                               ; preds = %34, %32
  %39 = load i32, i32* %3, align 4
  ret i32 %39
}

declare dso_local i64 @path__is_nt_namespace(i32*) #1

declare dso_local i64 @wcsncmp(i32*, i8*, i32) #1

declare dso_local i32 @memcpy(i8*, i8*, i32) #1

declare dso_local i32 @git__utf16_to_8(i8*, i32, i32*) #1

declare dso_local i32 @git_path_mkposix(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
